--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-is": "17.0.2",
     "regenerator-runtime": "0.13.7",
+    "styled-components": "5.3.3",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
@@ -33,9 +35,12 @@
     "@types/node": "16.11.7",
     "@types/react": "17.0.30",
     "@types/react-dom": "17.0.9",
+    "@types/react-is": "17.0.2",
+    "@types/styled-components": "5.1.15",
     "@typescript-eslint/eslint-plugin": "~5.10.0",
     "@typescript-eslint/parser": "~5.10.0",
     "babel-jest": "27.2.3",
+    "babel-plugin-styled-components": "1.10.7",
     "cypress": "^9.1.0",
     "eslint": "~8.7.0",
     "eslint-config-next": "12.0.7",
