--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "private": true,
   "dependencies": {
     "@nrwl/next": "13.8.2",
+    "classnames": "^2.3.1",
     "core-js": "^3.6.5",
     "next": "12.0.7",
     "react": "17.0.2",
@@ -17,7 +18,8 @@
     "react-is": "17.0.2",
     "regenerator-runtime": "0.13.7",
     "styled-components": "5.3.3",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "unsplash-js": "^7.0.15"
   },
   "devDependencies": {
     "@nrwl/cli": "13.8.2",
