--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "private": true,
   "dependencies": {
     "@nrwl/next": "13.8.2",
+    "airtable": "^0.11.2",
     "classnames": "^2.3.1",
     "core-js": "^3.6.5",
     "next": "12.0.7",
