--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-is": "17.0.2",
     "regenerator-runtime": "0.13.7",
     "styled-components": "5.3.3",
+    "swr": "^1.2.2",
     "tslib": "^2.0.0",
     "unsplash-js": "^7.0.15"
   },
