--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "airtable": "^0.11.2",
     "classnames": "^2.3.1",
     "core-js": "^3.6.5",
-    "next": "12.0.7",
+    "next": "^11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-is": "17.0.2",
